min heights added

--- a/_static/nature.css
+++ b/_static/nature.css
@@ -42,7 +42,7 @@ ul.horizontal, ul.horizontal li {
 div.header {
     /* for the logo to correctly expand when showing results
        but remain cut when not */
-    height: 60px;
+    min-height: 60px;
 }
 
 
@@ -723,7 +723,7 @@ span.example-links {
 div.banner-container {
   width: 100%;
   background-color: #3499CD;
-  height: 229px;
+  min-height: 229px;
 }
 
 div.banner-inner {
