--- a/_static/nature.css
+++ b/_static/nature.css
@@ -380,6 +380,12 @@ div.sphinxsidebar {
 /*    margin-left: -100%; */
 }
 
+@media all and (max-device-width: 360) and (max-device-height: 640) {
+    div.sphinxsidebar {
+        display: none;
+    }
+}
+
 div.sphinxsidebar h4, div.sphinxsidebar h3 {
     margin: 1em 0 0.5em 0;
     font-size: 0.9em;
@@ -666,10 +672,29 @@ ul.keywordmatches li.goodmatch a {
 }
 
 div.green {
-    margin-top: 100px;
+    margin-top: 2em;
     color: #468847;
     background-color: #dff0d8;
-    border: 1px solid #d6e9c6;
+    border: 0.3em solid rgba(79, 173, 117, 0.35);
+}
+
+div#download-container {
+    text-align: right;
+}
+
+div#download-container .green {
+    text-align: left;
+    display: inline-block;
+    margin: 2em 0 1em 0;
+    color: #468847;
+    background-color: #dff0d8;
+    border: 0.3em solid rgba(79, 173, 117, 0.35);
+    min-width: 30%;
+}
+
+div#download-container .green p {
+    font-size: 1.5em;
+    margin-left: 0.5em;
 }
 
 
@@ -788,4 +813,8 @@ div#logo-banner .banner {
     padding: 30px 10px 15px 30px;
     font-size: 1.6em;
     line-height: 1.7em;
+}
+
+div.toctree-wrapper.compound {
+    margin-top: 2em;
 }
