--- a/_static/nature.css
+++ b/_static/nature.css
@@ -380,7 +380,7 @@ div.sphinxsidebar {
 /*    margin-left: -100%; */
 }
 
-@media all and (max-device-width: 360) and (max-device-height: 640) {
+@media all and (min-device-width: 240px) and (max-device-height: 640px) {
     div.sphinxsidebar {
         display: none;
     }
