hide sidebar nilearn4

--- a/_static/nature.css
+++ b/_static/nature.css
@@ -380,9 +380,9 @@ div.sphinxsidebar {
 /*    margin-left: -100%; */
 }
 
-@media all and (max-device-width: 360px) and (max-device-height: 640px) {
+@media (max-width: 360px) {
     div.sphinxsidebar {
-        display: none;
+        display: none !important;
     }
 }
 
