--- a/_static/nature.css
+++ b/_static/nature.css
@@ -24,7 +24,7 @@ body {
 	max-width: 100%;
  	max-height: 100%;
 	background: white;
-	min-width: none;
+	min-width: 0;
     }
 }
 
@@ -270,7 +270,7 @@ div.related ul li {
     float: left;
 }
 @media(max-width: 360px) {
-    div.related ul li {
+    div.related ul {
         background-image: none;
     }
 }
@@ -761,7 +761,7 @@ div#machine-learning-for-neuro-imaging h1 {
 @media (max-width: 360px) {
     div#machine-learning-for-neuro-imaging.section .admonition.warning {
         text-align: center;
-	max-width: 58%;
+	max-width: 100%;
     }
 }
 
@@ -884,6 +884,13 @@ div#logo-banner .logo {
     }
 }
 
+@media (max-width: 360px) {
+    div#logo-banner .logo a img {
+        max-width: 100%;
+	margin: 5px;
+    }
+}
+
 div#logo-banner .banner {
     padding: 30px 10px 15px 30px;
     font-size: 1.6em;
@@ -892,8 +899,14 @@ div#logo-banner .banner {
 
 @media (max-width: 360px) {
     div#logo-banner .banner {
-        max-width: 26%;
+        line-height: 0.7em
 	padding: 0 0 0 0;
+    }
+}
+
+#media (max-width: 360px) {
+    div#banner.banner {
+        display: none;
     }
 }
 
