--- a/_static/nature.css
+++ b/_static/nature.css
@@ -20,11 +20,17 @@ body {
 
 @media (max-width: 360px) {
     body {
-        margin: 0 0 0 0;
+        margin: 0;
 	max-width: 100%;
  	max-height: 100%;
 	background: white;
 	min-width: 0;
+    }
+}
+
+@media (max-width: 640px) {
+    body {
+        margin: 0;
     }
 }
 
@@ -887,7 +893,7 @@ div#logo-banner .logo {
 
 @media (max-width: 360px) {
     div#logo-banner .logo a img {
-        max-width: 100%;
+        max-width: 85%;
 	margin: 5px;
     }
 }
@@ -918,7 +924,7 @@ div#logo-banner .banner h2 {
     }
 }
 
-#media (max-width: 360px) {
+@media (max-width: 360px) {
     div#banner.banner {
         display: none;
     }
