--- a/_static/nature.css
+++ b/_static/nature.css
@@ -95,6 +95,13 @@ div.highlight-python pre {
     overflow-y: hidden;
 }
 
+@media (max-width: 360px) {
+    div.highlight-python pre {
+        font-size: 85%;
+	line-height: 1.5em;
+    }
+}
+
 td.linenos pre {
     padding: 0.5em 0;
     border: 0;
@@ -384,6 +391,12 @@ div.body h3 {
     border-radius: 10px;
     font-weight: bold;
     word-wrap: break-word;
+}
+
+@media (max-width: 360px) {
+    div.body h1 {
+        font-size: 1.7em;
+    }
 }
 
 div.body h2,
@@ -916,27 +929,12 @@ div#logo-banner .banner h1 {
     margin : -0.7em 0 0.3em 4.5em;
 }
 
-@media (max-width: 360) {
-    div#logo-banner .banner h1 {
-         font-size: 190%;
-	 margin: -0.7em 0 0.3em 0;
-	 text-align: center;
-    }
-}
-
 div#logo-banner .banner h2 {
     text-align: left;
     margin : -0.5em 0 0 6.5em;
     font-size: 1.05em;
     color: #11557C;
 }
-
-@media (max-width: 360) {
-    div#logo-banner .banner h2 {
-         font-size: 118%;
-    }
-}
-
 
 @media (max-width: 360px) {
     div#logo-banner .banner {
@@ -945,9 +943,30 @@ div#logo-banner .banner h2 {
     }
 }
 
+
+@media (max-width: 360) {
+    div#logo-banner .banner h1 {
+         font-size: 190%;
+	 margin: -0.7em 0 0.3em 0;
+	 text-align: center;
+    }
+}
+
+@media (max-width: 360) {
+    div#logo-banner .banner h2 {
+         font-size: 118%;
+    }
+}
+
 @media (max-width: 360px) {
     div#banner.banner {
         display: none;
+    }
+}
+
+@media (max-width: 360px) {
+    ul.horizontal img {
+        width: 100%
     }
 }
 
