--- a/_static/nature.css
+++ b/_static/nature.css
@@ -112,6 +112,7 @@ pre {
 
 div.highlight-python pre {
     overflow-y: hidden;
+    font-size: 90%;
 }
 
 @media (max-width: 360px) {
@@ -308,14 +309,12 @@ div.related ul li {
 }
 
 div.related ul li.right {
-    float: right;
-    margin-right: 5px;
+    display: none;
 }
 
-@media (max-width: 360px) {
-    div.related ul li.right {
-        display: none;
-    }
+div.related ul li#navbar-ecosystem {
+    float: right;
+    margin-right: 0.5em;
 }
 
 @media (min-width: 360px) {
@@ -377,6 +376,14 @@ div.bodywrapper h1 {
     font-size: 190%;
     border-radius: 0 15px 0 15px;
     -moz-border-radius: 0 15px 0 15px;
+}
+
+div#index-paragraph {
+    margin: 3em 1.1em 2em 2em;
+}
+
+div#index-paragraph p {
+    font-size: 147%;
 }
 
 div.body a {
@@ -507,7 +514,7 @@ h3 {
 }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-    color: black!important;
+    color: black;
 }
 
 h1 a.anchor, h2 a.anchor, h3 a.anchor, h4 a.anchor, h5 a.anchor, h6 a.anchor {
@@ -589,16 +596,26 @@ div.sphinxsidebarwrapper ul li p {
     font-size: 14px;
 }
 
+div.sphinxsidebarwrapper h3 a {
+    color: white;
+}
+
 div.admonition, div.warning {
     font-size: 0.9em;
     margin: 1em 0 0 0;
     border: 1px solid #86989B;
     background-color: #f7f7f7;
+    max-width: 100%;
+    margin: 0 3em 0 3em;
 }
 
 div.admonition p, div.warning p {
-    margin: 0.5em 1em 0.5em 1em;
+    margin: 0.5em 1em 0.5em;
     padding: 0;
+}
+
+div.admonition.warning p.last {
+    margin: 0.5em 1em 0.5em;
 }
 
 div.admonition pre, div.warning pre {
@@ -751,7 +768,7 @@ div.green {
 }
 
 div#download-container {
-    text-align: right;
+    text-align: center;
 }
 
 @media (max-width: 360px) {
@@ -807,6 +824,13 @@ div#machine-learning-for-neuro-imaging h1 {
         text-align: center;
 	max-width: 100%;
     }
+}
+
+div.body blockquote {
+    background: whitesmoke;
+    border: solid;
+    border-color: lightgray;
+    border-width: 0.1em;
 }
 
 @media (max-width: 360px) {
@@ -895,8 +919,7 @@ pre {
 }
 
 div.body p {
-    margin-top: 1.2em;
-    margin-bottom: .1em;
+    margin: 1.2em 0 .1em 0;
 }
 
 .float-right {
@@ -925,7 +948,7 @@ div#logo-banner {
 
 div#logo-banner .logo {
     background-color: white;
-    padding: 10px 20px 15px 15px;
+    padding: 27px 20px 0 15px;
     float: left;
     max-width: 14em;
 }
@@ -988,6 +1011,10 @@ div#logo-banner .banner h2 {
     }
 }
 
+div#banner.banner img {
+    margin: 0 1em 0 1em;
+}
+
 @media (max-width: 360px) {
     div#banner.banner {
         display: none;
@@ -1003,4 +1030,76 @@ div#logo-banner .banner h2 {
 
 div.toctree-wrapper.compound {
     margin-top: 2em;
+}
+
+
+.btn {
+    display: inline-block;
+    padding: 4px 12px;
+    margin: 0.5em;
+    font-size: 2.6em;
+    font-weight: bold;
+    line-height: 20px;
+    color: #333333;
+    text-align: center;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+    vertical-align: middle;
+    cursor: pointer;
+    background-color: #f5f5f5;
+    background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
+    background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
+    background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
+    background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
+    background-repeat: repeat-x;
+    border: 1px solid #cccccc;
+    border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+    border-bottom-color: #b3b3b3;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+
+.btn-primary {
+    color: #ffffff;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    background-color: #006dcc;
+    background-image: -moz-linear-gradient(top, #84DF11, #18CC00);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#84DF11), to(#18CC00));
+    background-image: -webkit-linear-gradient(top, #84DF11, #18CC00);
+    background-image: -o-linear-gradient(top, #84DF11, #18CC00);
+    background-image: linear-gradient(to bottom, #84DF11, #18CC00);
+    background-repeat: repeat-x;
+    border-color: #18CC00 #18CC00 #18CC00;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0044cc', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+}
+
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .btn-primary.disabled, .btn-primary[disabled] {
+    color: rgb(223, 238, 234);
+    background-color: #18CC00;
+}
+
+.btn:hover, .btn:focus {
+    text-decoration: none;
+    background-position: 0 -15px;
+    -webkit-transition: background-position 0.1s linear;
+    -moz-transition: background-position 0.1s linear;
+    -o-transition: background-position 0.1s linear;
+    transition: background-position 0.1s linear;
+    -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25);
+    -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25);
+    box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25);
+}
+
+table.longtable.docutils {
+    max-width: 100%;
+    margin: 0;
 }
