--- a/_static/nature.css
+++ b/_static/nature.css
@@ -152,6 +152,10 @@ div.body img {
     max-width:805px;
 }
 
+}
+    div.banner img {
+        vertical-align: middle;
+    }
 
 
 table.highlighttable {
@@ -472,6 +476,7 @@ div.sphinxsidebar h4, div.sphinxsidebar h3 {
     color: white;
     border: 1px solid #86989B;
     background-color: #4EACC5;
+    font-size: 1.2em;
 }
 
 div.sphinxsidebar ul {
@@ -594,6 +599,7 @@ div.sphinxsidebar ul.toc ul li {
 div.sphinxsidebarwrapper ul li p {
     line-height: 22px;
     font-size: 14px;
+    margin-left: 0.4em;
 }
 
 div.sphinxsidebarwrapper h3 a {
@@ -1106,4 +1112,73 @@ div.toctree-wrapper.compound {
 table.longtable.docutils {
     max-width: 100%;
     margin: 0;
+}
+
+
+
+div.index-grid .section {
+    padding: 0px;
+    margin: 2.5em 0.5em 1.5em 8em;
+}
+
+div.index-grid .col {
+    display: block;
+    float:left;
+    margin: 1% 0 1% 1.6%;
+}
+
+div.index-grid .col:first-child { margin-left: 0; }
+
+div.index-grid .group:before,
+div.index-grid .group:after {
+    /*content:"";*/
+    display:table;
+}
+div.index-grid .group:after {
+    clear:both;
+}
+
+div.index-grid .section.group h3 {
+    background-color: white;
+    padding: 5px;
+    border-radius: 10px;
+    font-size: 170%;
+    margin-left: -0.2em;
+}
+
+ div.index-grid .section.group h3 a {
+    color: #355F7C;
+ }
+
+    /*  GRID OF THREE  */
+div.index-grid .span_3_of_3 {
+    width: 100%;
+}
+div.index-grid .span_2_of_3 {
+    width: 66.1%;
+}
+div.index-grid .span_1_of_3 {
+    width: 32.2%;
+    margin: 0 0 4.5em 0;
+}
+div.index-grid .span_1_of_3 p {
+    font-size: 1.2em;
+}
+
+@media only screen and (max-width: 480px) {
+    div.index-grid .col {
+	margin: 1% 0 1% 0%;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    div.index-grid .span_3_of_3 {
+	width: 100%;
+    }
+    div.index-grid .span_2_of_3 {
+	width: 100%;
+    }
+    div.index-grid .span_1_of_3 {
+	width: 100%;
+    }
 }
