--- a/_static/nature.css
+++ b/_static/nature.css
@@ -390,6 +390,12 @@ div#index-paragraph p {
     font-size: 147%;
 }
 
+@media (max-width: 360px) {
+    div#index-paragraph {
+        margin: 0;
+    }
+}
+
 div.body a {
     line-height: 1.5em;
 }
@@ -620,6 +626,12 @@ div.admonition p, div.warning p {
     padding: 0;
 }
 
+@media (max-width: 360px) {
+    div.admonition.warning {
+        margin-top: 1em;
+    }
+}
+
 div.admonition.warning p.last {
     margin: 0.5em 1em 0.5em;
 }
@@ -847,6 +859,13 @@ div.body blockquote {
 @media (max-width: 360px) {
     blockquote {
         margin: 0.1em;
+    }
+}
+
+@media (max-width: 360px) {
+    div.body blockquote {
+        border-top: none;
+	margin-top: 0.5em;
     }
 }
 
@@ -1126,6 +1145,12 @@ div#index-grid.section.group {
     margin: 2.5em 0.5em 14.5em 4em;
 }
 
+@media (max-width: 360px) {
+    div#index-grid.section.group {
+        margin: 0.5em 0.5em 14.5em 4em;
+    }
+}
+
  .col {
     display: block;
     float:left;
@@ -1187,5 +1212,7 @@ div#index-grid.section.group {
     }
      .span_1_of_3 {
 	width: 100%;
+	margin-top: 0;
+	margin-bottom: 2em;
     }
 }
