--- a/_static/nature.css
+++ b/_static/nature.css
@@ -296,6 +296,11 @@ div.related ul li {
     float: left;
 }
 
+@media (max-width: 800px) {
+    div.related ul {
+        padding-bottom: 2em;
+    }
+}
 
 div.related ul li.right {
     display: none;
@@ -306,15 +311,9 @@ div.related ul li#navbar-ecosystem {
     margin-right: 0.5em;
 }
 
-@media (min-width: 800px) {
-    div.related ul li#navbar-about {
+@media (min-width: 360px) {
+    div.related ul li a#navbar-about {
         display: none;
-    }
-}
-
-@media (max-width: 569px) and (orientation: portrait){
-    div.related ul {
-        padding-bottom: 2em;
     }
 }
 
