--- a/_static/nature.css
+++ b/_static/nature.css
@@ -1411,18 +1411,27 @@ div.body .jcarousel-pagination a.active {
     float: left;
 }
 
+*[tooltip]:hover:after{
+    background: rgba(0,0,0,.8);
+    border-radius: 5px;
+    color: white;
+    content: attr(tooltip);
+    left: 95%;
+    padding: 5px 15px;
+    position: absolute;
+    z-index: 98;
+    width: 220px;
+    bottom: 52%
+}
+
 
 *[tooltip]:hover:before {
-    content: attr(tooltip);
-    background-color: black;
-    color: white;
-    top: 1em;
+    content: "";
     position: absolute;
     z-index: 99;
     border: solid;
     border-color: #333 transparent;
-    border-width: 6px 6px 0 6px;
-    left: 87%;
-    width: 11em;
-    padding: 4px;
+    border-width: 18px 0px 0px 20px;
+    left: 85%;
+    bottom: 58%
 }
